list 命令 支持从服务器查询数据